create github pages

--- a/page1.html
+++ b/page1.html
@@ -98,14 +98,14 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobirise.com">Contato</a>
+                        <a class="nav-link link mbr-black text-black display-4" href="page1.html#form1-r" target="_blank">Contato</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link link mbr-black text-black display-4" href="https://mobirise.com">
                             Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobirise.com">
+                        <a class="nav-link link mbr-black text-black display-4" href="page3.html#header2-v" target="_blank">
                             Suporte</a>
                     </li></ul>
 
@@ -154,7 +154,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ModH6oasLKvIc6UGHoQaXw7kIU5cwp/x65mAtKAKaG+AI28G35yI1PYRE4EyBMb3dOlsAKYQQ1gnIVllaKNTNdKFaFhUALrJmOK4HD073r98CMp52IXj3bEH2w5/BuiK">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4s6Ps4qkC+AYZvYKhnEXVMTo2mGCMDJ+WiRLp7FvvstSqIZWNV/FWngklbillR3pJeOqLBldlhaMPuZhwQL6zDFy07IQkRGIjaOPneVZRUG4CmSwYlPgJND6cPFj3GhN">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por sua mensagem, em breve retornaremos pra você. ;)</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
