--- a/page2.html
+++ b/page2.html
@@ -98,14 +98,14 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobirise.com">Contato</a>
+                        <a class="nav-link link mbr-black text-black display-4" href="page1.html#form1-r" target="_blank">Contato</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link link mbr-black text-black display-4" href="https://mobirise.com">
                             Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobirise.com">
+                        <a class="nav-link link mbr-black text-black display-4" href="page3.html#header2-v" target="_blank">
                             Suporte</a>
                     </li></ul>
 
