create github pages

--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
         <div class="row justify-content-start">
             <div class="mbr-white col-lg-8 col-md-10">
                 <h1 class="mbr-section-title mbr-bold align-left mbr-white pb-4 mbr-fonts-style display-1">
-                    <div>Pague uma vez</div><div>e parcelado</div>
+                    <div>Pagamento único</div><div>e pode ser parcelado</div>
                 </h1>
                 <p class="mbr-text align-left pb-1 mbr-fonts-style display-7">
-                    Na Super Plataforma você investe uma vez e a seu curso EAD é seu!<br>Ensino à distância fácil, barato e sem taxas ou pagamentos extras.</p>
+                    Na Super Plataforma você investe uma vez e o acesso é vitalício!<br>Ensino à distância fácil, barato e sem taxas ou pagamentos extras.</p>
                 <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="https://mobirise.com">
                         Sign Up for Excustion</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">
@@ -302,7 +302,7 @@
     </div>
 </section>
 
-<section class="features2 counters cid-rvdgBhywNK" id="features2-e">
+<section class="features2 s cid-rvdgBhywNK" id="features2-e">
 
     
 
@@ -324,7 +324,7 @@
                     <span class="mbr-iconfont mbri-user"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-5">Gestão de Cursos</h4>
+                    <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-5">1 Gestão de Cursos</h4>
                     <div class="line-wrap2">
                         <div class="line2"></div>
                     </div>
@@ -384,7 +384,7 @@
                     <span class="mbr-iconfont mbri-user"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-5">Integrações de Pagamento</h4>
+                    <h4 class="card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-5">Integrações de Pagamento</h4>
                     <div class="line-wrap2">
                         <div class="line2"></div>
                     </div>
@@ -824,7 +824,7 @@
 
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IZHB4kFlqbCqkNPGHx4Qp9gQ4+xxy/hgFnMjrEFo99tqBaUSG1sTsUWw638SZbxEYR8DcJP4cSafJXkMbNEHfqZhAoSwVT2/jd3cHrzPNAtltxeuYCXHJqrJK/YTEytB">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jA/mYISL8Yw7wMAsoBtC/khnakzWoo2FZH+u6JFWFPmcQudTvs1NsNxHpqxqYv7F+Tq+7Gr9hZSBGXEDJRkHZGdcCOoPrxrRatG5AAF1ZA80pAa4aH96Wc39F31crXse">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -881,6 +881,18 @@
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
-  
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5b5f1081df040c3e9e0c1734/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
