--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<!DOCTYPE html>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5b5f1081df040c3e9e0c1734/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script--><!DOCTYPE html>
 <html  >
 <head>
   <!-- Site made with Mobirise Website Builder v4.10.5, https://mobirise.com -->
@@ -824,7 +836,7 @@
 
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jA/mYISL8Yw7wMAsoBtC/khnakzWoo2FZH+u6JFWFPmcQudTvs1NsNxHpqxqYv7F+Tq+7Gr9hZSBGXEDJRkHZGdcCOoPrxrRatG5AAF1ZA80pAa4aH96Wc39F31crXse">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hIXW28vKQG0tivWwT0X8jROvZOgZS++eqRpkoYdsMHQr8pWwzK1jq80c1rnEAtQ44o9GnRjceJ6wUfcNSVD+U4Pb+gi0c2nZ1t3HgoCwrzzVhfaFqZlM9DXqRBQFQV+i">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -881,18 +893,6 @@
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
-  <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5b5f1081df040c3e9e0c1734/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+  
 </body>
 </html>
